--- a/testing/Base.lproj/Main.storyboard
+++ b/testing/Base.lproj/Main.storyboard
@@ -236,6 +236,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <gestureRecognizers/>
                         <viewLayoutGuide key="safeArea" id="7Fs-AK-fWO"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="Ew6-vA-ZdO" appends="YES" id="uub-Kt-MSc"/>
+                        </connections>
                     </view>
                     <connections>
                         <outlet property="splitImageView" destination="uyI-cp-IbN" id="Pfh-UD-fQV"/>
@@ -243,8 +246,29 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="10o-nl-ahU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer numberOfTapsRequired="3" id="Ew6-vA-ZdO">
+                    <connections>
+                        <segue destination="zH7-w1-LQj" kind="show" id="dGB-oX-1Nj"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1380" y="135"/>
+            <point key="canvasLocation" x="1379.6762589928057" y="134.53237410071944"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="09e-n8-q9M">
+            <objects>
+                <viewController id="iKX-C3-wdW" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3k0-q9-9v2">
+                        <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1gI-g7-H0v" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="dGB-oX-1Nj"/>
+    </inferredMetricsTieBreakers>
 </document>
