--- a/testing/Base.lproj/Main.storyboard
+++ b/testing/Base.lproj/Main.storyboard
@@ -27,10 +27,14 @@
                                 <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <gestureRecognizers/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                     <wkPreferences key="preferences"/>
                                 </wkWebViewConfiguration>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="jRf-JW-zwb" appends="YES" id="e57-td-IRe"/>
+                                </connections>
                             </wkWebView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gYP-w5-IYr">
                                 <rect key="frame" x="893" y="755" width="219" height="79"/>
@@ -48,22 +52,21 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <connections>
-                            <outletCollection property="gestureRecognizers" destination="wTY-L0-RNl" appends="YES" id="7PD-kB-MRr"/>
-                        </connections>
                     </view>
                     <connections>
+                        <outlet property="vcTripleTapGest" destination="jRf-JW-zwb" id="M9Y-OM-KW9"/>
                         <outlet property="webViewTest" destination="W6W-t1-EU9" id="pJI-KZ-Rn8"/>
+                        <segue destination="zH7-w1-LQj" kind="show" identifier="vcToMenu" id="z14-VN-9nl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer numberOfTapsRequired="3" id="wTY-L0-RNl">
+                <tapGestureRecognizer numberOfTapsRequired="3" id="jRf-JW-zwb">
                     <connections>
-                        <segue destination="zH7-w1-LQj" kind="show" id="qUe-i6-HWg"/>
+                        <action selector="tripleTapHappened:" destination="BYZ-38-t0r" id="NUe-ad-Mv2"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="-80.935251798561154" y="130.21582733812951"/>
+            <point key="canvasLocation" x="-312" y="144"/>
         </scene>
         <!--Menu Controller-->
         <scene sceneID="1Ge-W7-g7v">
@@ -116,7 +119,7 @@
                                     <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <segue destination="BYZ-38-t0r" kind="show" id="z7Z-Rd-GJ9"/>
+                                    <action selector="returnToFS:" destination="zH7-w1-LQj" eventType="touchUpInside" id="1PL-B4-pHc"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mdY-Bi-SpE">
@@ -128,11 +131,11 @@
                                 </accessibility>
                                 <gestureRecognizers/>
                                 <fontDescription key="fontDescription" type="system" pointSize="35"/>
-                                <state key="normal" title="Access Photos">
+                                <state key="normal" title="Split View">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="6sj-QG-mFo" kind="show" id="rge-YQ-OnN"/>
+                                    <segue destination="6sj-QG-mFo" kind="show" identifier="menuToSV" id="9dc-PF-T9Z"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ad6-G2-3dj">
@@ -161,7 +164,7 @@
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="07p-PN-0oP" kind="show" id="Yu0-sA-CSM"/>
+                                    <segue destination="07p-PN-0oP" kind="show" identifier="menuToHelp" id="MaN-ME-mTu"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -199,7 +202,7 @@
                                     <wkPreferences key="preferences"/>
                                 </wkWebViewConfiguration>
                                 <connections>
-                                    <outletCollection property="gestureRecognizers" destination="8XK-sc-0II" appends="YES" id="o39-JH-s7C"/>
+                                    <outletCollection property="gestureRecognizers" destination="uX4-TQ-Mhh" appends="YES" id="43c-p2-gq9"/>
                                 </connections>
                             </wkWebView>
                         </subviews>
@@ -208,16 +211,17 @@
                     </view>
                     <connections>
                         <outlet property="helpWebView" destination="d6G-e7-cgj" id="sIU-CH-u60"/>
+                        <outlet property="hvTapGest" destination="uX4-TQ-Mhh" id="L9m-Ud-h7u"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WE3-VX-HMw" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer numberOfTapsRequired="3" id="8XK-sc-0II">
+                <tapGestureRecognizer numberOfTapsRequired="3" id="uX4-TQ-Mhh">
                     <connections>
-                        <segue destination="zH7-w1-LQj" kind="show" id="gRx-SI-nvS"/>
+                        <action selector="hvGestPressed:" destination="07p-PN-0oP" id="A0E-5w-Nuf"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="666.9064748201439" y="900.7194244604317"/>
+            <point key="canvasLocation" x="642" y="1046"/>
         </scene>
         <!--Split Controller-->
         <scene sceneID="xXX-pE-907">
@@ -227,44 +231,61 @@
                         <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uyI-cp-IbN">
-                                <rect key="frame" x="581" y="0.0" width="531" height="834"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <gestureRecognizers/>
-                            </imageView>
-                            <wkWebView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Iz7-Uu-D2C">
+                            <wkWebView contentMode="center" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Iz7-Uu-D2C">
                                 <rect key="frame" x="0.0" y="0.0" width="573" height="834"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <gestureRecognizers/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                     <wkPreferences key="preferences"/>
                                 </wkWebViewConfiguration>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="bWT-9R-glB" appends="YES" id="Upj-Er-mgC"/>
+                                </connections>
                             </wkWebView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uyI-cp-IbN">
+                                <rect key="frame" x="581" y="0.0" width="531" height="834"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="ZNl-kT-58h" appends="YES" id="MEb-1G-nHZ"/>
+                                </connections>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <gestureRecognizers/>
                         <viewLayoutGuide key="safeArea" id="7Fs-AK-fWO"/>
                         <connections>
-                            <outletCollection property="gestureRecognizers" destination="Ew6-vA-ZdO" appends="YES" id="uub-Kt-MSc"/>
+                            <outletCollection property="gestureRecognizers" destination="DwC-KH-oG8" appends="YES" id="EYZ-Lf-FgI"/>
                         </connections>
                     </view>
                     <connections>
+                        <outlet property="leftGest" destination="bWT-9R-glB" id="zYZ-2S-oVV"/>
+                        <outlet property="mainGest" destination="DwC-KH-oG8" id="kpS-f7-g3T"/>
+                        <outlet property="rightGest" destination="ZNl-kT-58h" id="LSf-YQ-ier"/>
                         <outlet property="splitImageView" destination="uyI-cp-IbN" id="Pfh-UD-fQV"/>
                         <outlet property="splitWebView" destination="Iz7-Uu-D2C" id="dus-1T-DN3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="10o-nl-ahU" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer numberOfTapsRequired="3" id="Ew6-vA-ZdO">
+                <tapGestureRecognizer numberOfTapsRequired="3" id="bWT-9R-glB">
                     <connections>
-                        <segue destination="zH7-w1-LQj" kind="show" id="dGB-oX-1Nj"/>
+                        <action selector="leftGestAct:" destination="6sj-QG-mFo" id="H8G-S5-Rkc"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer id="ZNl-kT-58h">
+                    <connections>
+                        <action selector="rightGestAct:" destination="6sj-QG-mFo" id="bX9-CU-dEM"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer numberOfTapsRequired="3" id="DwC-KH-oG8">
+                    <connections>
+                        <action selector="mainGestAct:" destination="6sj-QG-mFo" id="MtF-5Y-fSQ"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1379.6762589928057" y="134.53237410071944"/>
+            <point key="canvasLocation" x="1549" y="144"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="dGB-oX-1Nj"/>
-    </inferredMetricsTieBreakers>
 </document>
