--- a/testing/Base.lproj/Main.storyboard
+++ b/testing/Base.lproj/Main.storyboard
@@ -253,6 +253,17 @@
                                     <outletCollection property="gestureRecognizers" destination="ZNl-kT-58h" appends="YES" id="MEb-1G-nHZ"/>
                                 </connections>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5oQ-tG-WOE">
+                                <rect key="frame" x="973" y="7" width="128" height="60"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.50300721609999999" green="0.98407545230000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <state key="normal" title="Access Photos">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="accessPhotosPressed:" destination="6sj-QG-mFo" eventType="touchUpInside" id="Spy-7Z-ohU"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <gestureRecognizers/>
@@ -262,6 +273,7 @@
                         </connections>
                     </view>
                     <connections>
+                        <outlet property="accessPhotosButton" destination="5oQ-tG-WOE" id="Dn0-Ed-0Lc"/>
                         <outlet property="leftGest" destination="bWT-9R-glB" id="zYZ-2S-oVV"/>
                         <outlet property="mainGest" destination="DwC-KH-oG8" id="kpS-f7-g3T"/>
                         <outlet property="rightGest" destination="ZNl-kT-58h" id="LSf-YQ-ier"/>
@@ -286,7 +298,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1549" y="144"/>
+            <point key="canvasLocation" x="1548.5611510791368" y="143.88489208633095"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
